--- a/project-4/DC.css
+++ b/project-4/DC.css
@@ -216,12 +216,13 @@ select
     #6e54ec 81%,
     #6E54EC 100%) 0% 0% no-repeat padding-box;
 }
-.a:hover span
+.a:hover
 {
     /* opacity: 0;
     transition-duration: .3s; */
     display: none;
 }
+
 .a:hover::before
 {
     content: "Party time";
@@ -532,6 +533,60 @@ span
     left: 15px;
     font-weight: 100;
 }
+#wake
+{
+    color: white;
+    position: absolute;
+    top: 1px;
+    left: 120px;
+    font-size: 15px;
+    display: inline;
+    width: 100px;
+}
+#lunch
+{
+    color: white;
+    position: absolute;
+    top: 22px;
+    left: 120px;
+    font-size: 15px;
+    display: inline;
+    width: 100px;
+}
+#nap
+{
+    color: white;
+    position: absolute;
+    top: 48px;
+    left: 120px;
+    font-size: 15px;
+    display: inline;
+    width: 100px;
+}
+#night2
+{
+    color: white;
+    position: absolute;
+    top: 67px;
+    left: 120px;
+    font-size: 15px;
+    display: inline;
+    width: 100px;
+}
+button
+{
+    font-size: 25px;
+    background-color: transparent;
+    border: none;
+    color: white;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    position: absolute;
+    top: 5px;
+    left: 80px;
+}
+
+
+
 @media (max-width:1000px)
 {
 
@@ -723,5 +778,49 @@ span
         font-size: 26px;
         
     }
-    
+    #wake
+{
+    color: white;
+    position: absolute;
+    top: 1px;
+    left: 227px;
+    font-size: 15px;
+    display: inline;
+    width: 100px;
+}
+#lunch
+{
+    color: white;
+    position: absolute;
+    top: 22px;
+    left: 220px;
+    font-size: 15px;
+    display: inline;
+    width: 100px;
+}
+#nap
+{
+    color: white;
+    position: absolute;
+    top: 48px;
+    left: 220px;
+    font-size: 15px;
+    display: inline;
+    width: 100px;
+}
+#night2
+{
+    color: white;
+    position: absolute;
+    top: 67px;
+    left: 220px;
+    font-size: 15px;
+    display: inline;
+    width: 100px;
+}
+button
+{
+    position: absolute;
+    left: 160px;
+}    
 }
