--- a/project-5/darkcs.css
+++ b/project-5/darkcs.css
@@ -12,6 +12,11 @@ html
     top: 60px;
     
 }
+#empty
+{
+    position: relative;
+    left: -100px;
+}
 .TasksList
 {
 
@@ -42,7 +47,7 @@ html
 #add
 {
     background-color: white;
-    box-shadow: 5px 5px 5px 0px rgb(214, 210, 210);
+    box-shadow: 5px 5px 5px 0px rgb(39, 39, 39);
     color: rgb(185, 84, 84);
     font-weight: 100;
     position: relative;
@@ -51,7 +56,7 @@ html
     z-index: 1;
     height: 200px;
     width: 400px;
-    border: 1px solid red;
+    border: 1px solid #DA0037;
     border-radius: 10px;
     z-index: 1;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -71,7 +76,7 @@ input[type="text"]
 {
     height: 30px;
     width: 80px;
-    background-color: rgb(216, 49, 49);
+    background-color: #DA0037;
     position: relative;
     top: 30px;
     left: 80px;
@@ -83,7 +88,7 @@ input[type="text"]
 {
     height: 30px;
     width: 80px;
-    background-color: rgb(216, 49, 49);
+    background-color: #DA0037;
     position: relative;
     top: 30px;
     left: 80px;
@@ -95,7 +100,7 @@ input[type="text"]
 {
     height: 30px;
     width: 80px;
-    background-color: rgb(216, 49, 49);
+    background-color:#DA0037;
     position: relative;
     top: 30px;
     left: 170px;
@@ -107,7 +112,7 @@ input[type="text"]
 {
     height: 30px;
     width: 80px;
-    background-color: rgb(216, 49, 49);
+    background-color: #DA0037;
     position: relative;
     top: 30px;
     left: 170px;
@@ -119,7 +124,7 @@ h4
 {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-weight: lighter;
-    color: rgb(237, 45, 45);
+    color: #DA0037;
     text-align: center;
     font-size: 18px;
 }
@@ -127,7 +132,7 @@ h4
 .fa-circle-plus
 {
     /* text-decoration: none; */
-    color: red;
+    color: #DA0037;
     font-size: 26px;
 }
 a
@@ -185,39 +190,39 @@ button
 }
 #hor
 {
-    border-bottom: 1px solid black;
     width: 199px;
     border-radius: 1px;
-    
+    border: none;
+    border-bottom: 1px solid #f1f1f1;
 }
 #child
 {
     width: 200px;
     height: 300px;
     font-size: 20px;
-    color: brown;
+    color: #f1f1f1;
     border-radius: 6px;
-    /* color: brown; */
-    border: 1px solid rgb(215, 99, 99);
+    border: none;
     border-radius: 10px;
     text-align: center;
-    filter: drop-shadow(10px 10px 100px gray);
-    box-shadow: 5px 5px 5px 0px rgb(214, 210, 210);
-    /* position: absolute;
-    top: 230px;
-    left: 620px; */
+    filter: drop-shadow(0px 0px 0px gray);
+    /* box-shadow: 5px 5px 5px 0px rgb(214, 210, 210); */
     text-decoration: none;
-
     display: flex;
     flex-flow: column wrap;
+    background-color: rgb(25, 24, 24);
+    padding: 10px;
 }
 #text
 {
     text-align: center;
 }
+.plusIcon
+{
+    color: #DA0037;
+}
 #addIcon
 {
-    color: red;
     font-size: 23px;
     position: absolute;
     top: 270px;
@@ -225,7 +230,7 @@ button
 }
 #trashIcon
 {
-    color: red;
+    color: #DA0037;
     font-size: 23px;
     position: absolute;
     top: 270px;
@@ -243,21 +248,21 @@ button
     font-size: 23px;
 }
 .dropbtn {
-    background-color: red;
+    background-color: #DA0037;
     color: white;
     padding: 16px;
     font-size: 16px;
     border: none;
     cursor: pointer;
+    border-radius: 10px;
+    min-width: 160px;
   }
-  
-  /* The container <div> - needed to position the dropdown content */
-  .dropdown {
+  .dropdown 
+  {
     position: relative;
     display: inline-block;
+
   }
-  
-  /* Dropdown Content (Hidden by Default) */
   .dropdown-content {
     display: none;
     position: absolute;
@@ -265,25 +270,40 @@ button
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
+    border-radius: 0px 0px 10px 10px;
   }
-  
-  /* Links inside the dropdown */
-  .dropdown-content a {
+  .dropdown-content a 
+  {
     color: black;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
   }
-  
-  /* Change color of dropdown links on hover */
-  .dropdown-content a:hover {background-color: #f1f1f1}
-  
-  /* Show the dropdown menu on hover */
-  .dropdown:hover .dropdown-content {
+.dropdown-content a:hover 
+{
+    background-color: gray;
+}
+  .dropdown-content :nth-child(even)
+  {
+        border-radius: 0px 0px 10px 10px;
+  }
+  .dropdown:hover .dropdown-content 
+  {
     display: block;
   }
-  
-  /* Change the background color of the dropdown button when the dropdown content is shown */
-  .dropdown:hover .dropbtn {
-    background-color: blue;
+  .dropdown:hover .dropbtn 
+  {
+    background-color: #181D31;
+    border-radius: 10px 10px 0px 0px;
+  }
+  .pendingTask
+  {
+    display: flex;
+    justify-content: space-around;
+    padding: 10px;
+  }
+  h6
+  {
+    padding: 0;
+    margin: 0;
   }
