--- a/project-5/todocs.css
+++ b/project-5/todocs.css
@@ -36,7 +36,7 @@
 {
     background-color: white;
     box-shadow: 5px 5px 5px 0px rgb(214, 210, 210);
-    color: rgb(185, 84, 84);
+    color: #439A97;
     font-weight: 100;
     position: relative;
     top: 200px;
@@ -44,7 +44,7 @@
     z-index: 1;
     height: 200px;
     width: 400px;
-    border: 1px solid red;
+    border: 1px solid #439A97;
     border-radius: 10px;
     z-index: 1;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -64,7 +64,7 @@ input[type="text"]
 {
     height: 30px;
     width: 80px;
-    background-color: rgb(216, 49, 49);
+    background-color: #439A97;
     position: relative;
     top: 30px;
     left: 80px;
@@ -76,7 +76,7 @@ input[type="text"]
 {
     height: 30px;
     width: 80px;
-    background-color: rgb(216, 49, 49);
+    background-color:#439A97;
     position: relative;
     top: 30px;
     left: 80px;
@@ -88,7 +88,7 @@ input[type="text"]
 {
     height: 30px;
     width: 80px;
-    background-color: rgb(216, 49, 49);
+    background-color: #439A97;
     position: relative;
     top: 30px;
     left: 170px;
@@ -100,7 +100,7 @@ input[type="text"]
 {
     height: 30px;
     width: 80px;
-    background-color: rgb(216, 49, 49);
+    background-color:#439A97;
     position: relative;
     top: 30px;
     left: 170px;
@@ -112,7 +112,7 @@ h4
 {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-weight: lighter;
-    color: rgb(237, 45, 45);
+    color: #439A97;
     text-align: center;
     font-size: 18px;
 }
@@ -120,7 +120,7 @@ h4
 .fa-circle-plus
 {
     /* text-decoration: none; */
-    color: red;
+    color:#439A97;
     font-size: 26px;
 }
 a
@@ -178,39 +178,46 @@ button
 }
 #hor
 {
-    border-bottom: 1px solid black;
+    border: none;
     width: 199px;
     border-radius: 1px;
-    
+    border-bottom: 1px solid black;
 }
 #child
 {
     width: 200px;
     height: 300px;
+    max-height: fit-content;
     font-size: 20px;
-    color: brown;
+    color: #181D31;
     border-radius: 6px;
-    /* color: brown; */
-    border: 1px solid rgb(215, 99, 99);
+    /* border: 1px solid #DA0037; */
     border-radius: 10px;
     text-align: center;
-    filter: drop-shadow(10px 10px 100px gray);
-    box-shadow: 5px 5px 5px 0px rgb(214, 210, 210);
-    /* position: absolute;
-    top: 230px;
-    left: 620px; */
+    filter: drop-shadow(0px 0px 0px gray);
+    /* box-shadow: 5px 5px 5px 0px rgb(214, 210, 210); */
     text-decoration: none;
-
     display: flex;
     flex-flow: column wrap;
+    background-color:#CBEDD5;
+    padding: 10px;
+}
+#mini
+{
+    display: flex;
+    justify-content: space-evenly;
 }
 #text
 {
     text-align: center;
 }
+.plusIcon
+{
+    color: #181D31;
+}
 #addIcon
 {
-    color: red;
+    color: #181D31;
     font-size: 23px;
     position: absolute;
     top: 270px;
@@ -218,7 +225,7 @@ button
 }
 #trashIcon
 {
-    color: red;
+    color: #181D31;
     font-size: 23px;
     position: absolute;
     top: 270px;
@@ -236,47 +243,66 @@ button
     font-size: 23px;
 }
 .dropbtn {
-    background-color: rgb(216, 49, 49);
+    background-color: #439A97 ;
     color: white;
     padding: 16px;
     font-size: 16px;
     border: none;
     cursor: pointer;
+    min-width: 160px;
+    border-radius: 10px;
   }
-  
-  /* The container <div> - needed to position the dropdown content */
-  .dropdown {
+  .dropdown 
+  {
     position: relative;
     display: inline-block;
   }
-  
-  /* Dropdown Content (Hidden by Default) */
-  .dropdown-content {
+  .dropdown-content 
+  {
     display: none;
     position: absolute;
     background-color: #f9f9f9;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
+    border-radius: 0px 0px 10px 10px;
   }
-  
-  /* Links inside the dropdown */
-  .dropdown-content a {
+  .dropdown-content a 
+  {
     color: black;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
   }
-  
-  /* Change color of dropdown links on hover */
-  .dropdown-content a:hover {background-color: #f1f1f1}
-  
-  /* Show the dropdown menu on hover */
-  .dropdown:hover .dropdown-content {
+.dropdown-content a:hover 
+{
+    background-color: gray;
+}
+.dropdown-content :nth-child(even)
+  {
+        border-radius: 0px 0px 10px 10px;
+  }
+  .dropdown:hover .dropdown-content 
+  {
     display: block;
   }
-  
-  /* Change the background color of the dropdown button when the dropdown content is shown */
   .dropdown:hover .dropbtn {
-    background-color: black;
+    background-color: #181D31;
+    border-radius: 10px 10px 0px 0px;
+  }
+  #empty
+{
+    position: relative;
+    left: -100px;
+}
+  .pendingTask
+  {
+    display: flex;
+    justify-content: space-around;
+    padding: 10px;
+  }
+  h6
+  {
+    padding: 0;
+    margin: 0;
   }
